--- a/Biller/pom.xml
+++ b/Biller/pom.xml
@@ -8,7 +8,6 @@
     <packaging>war</packaging>
 
     <name>Biller</name>
-<!--ahmad alajarmeh ggg فشت قشسنقلاشلاش-->
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -165,11 +164,11 @@
         </dependency>
         
         <!--MySql 5.1.15 Connector-->    
-        <!--        <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.15</version>
-        </dependency>-->
+        </dependency>
         
         <!--oracle 12.1.0.1 Connector-->    
         <dependency>
@@ -178,7 +177,7 @@
             <version>12.1.0.1</version>
         </dependency>
         
-       <dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.0</version>
