--- a/Biller/pom.xml
+++ b/Biller/pom.xml
@@ -171,12 +171,12 @@
         </dependency>
         
         <!--oracle 12.1.0.1 Connector-->    
-        <dependency>
+<!--        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc7</artifactId>
             <version>12.1.0.1</version>
         </dependency>
-        
+        -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
