--- a/Biller/pom.xml
+++ b/Biller/pom.xml
@@ -171,11 +171,11 @@
         </dependency>
         
         <!--oracle 12.1.0.1 Connector-->    
-<!--        <dependency>
+        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc7</artifactId>
             <version>12.1.0.1</version>
-        </dependency>-->
+        </dependency>
         
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
