--- a/Biller/pom.xml
+++ b/Biller/pom.xml
@@ -183,6 +183,12 @@
             <version>2.5.0</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.12.0.RELEASE</version>
+        </dependency>
+        
     </dependencies>
     
     
