--- a/Biller/pom.xml
+++ b/Biller/pom.xml
@@ -23,18 +23,18 @@
     <dependencies>
         
         <!--MySql 5.1.15 Connector-->    
-<!--        <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.15</version>
-        </dependency>-->
+        </dependency>
         
         <!--oracle 12.1.0.1 Connector-->    
-        <dependency>
+        <!--        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc7</artifactId>
             <version>12.1.0.1</version>
-        </dependency>
+        </dependency>-->
         
         
         <dependency>
@@ -69,7 +69,13 @@
             <version>${org.springframework-version}</version>
         </dependency>
         
-         <!-- Spring ORM -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
+        
+        <!-- Spring ORM -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
@@ -90,7 +96,7 @@
             <version>1.4</version>
         </dependency>
         
-      <!-- SLF4J Logging -->
+        <!-- SLF4J Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
